--- a/monitoring/templates/painel.html
+++ b/monitoring/templates/painel.html
@@ -33,6 +33,25 @@
                 max-height: 280px;
                 overflow: scroll;
             }
+            .nav-sidebar > li > div.panel {
+                margin-right: 20px;
+                margin-left: 20px;
+            }
+            div.panel-success > div.panel-body {
+                background-color: #dff0d8;
+            }
+            div.panel-info > div.panel-body {
+                background-color: #d9edf7;
+            }
+            div.panel-warning > div.panel-body {
+                background-color: #fcf8e3;
+            }
+            div.panel-danger > div.panel-body {
+                background-color: #f2dede;
+            }
+            .hidden {
+                display: none;
+            }
         </style>
     </head>
 
@@ -47,14 +66,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Project name</a>
+                    <a class="navbar-brand" href="#">Painel de Controle</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Dashboard</a></li>
-                        <li><a href="#">Settings</a></li>
                         <li><a href="#">Profile</a></li>
-                        <li><a href="#">Help</a></li>
                     </ul>
                     <form class="navbar-form navbar-right">
                         <input type="text" class="form-control" placeholder="Search...">
@@ -82,12 +98,34 @@
                         <li><a href="#"><span class="label label-success">Ativo</span></a></li>
                         <li><a href="#"><span class="label label-info">Aguardando definição</span></a></li>
                     </ul>
+                    <ul class="nav nav-sidebar condicoes">
+                        {% for sala in salas %}
+                        <li class="hidden" id="condicoes-{{ sala.id }}">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">
+                                        Condições de operação para sala <a href={{ sala.link_to_mapa }}>{{ sala.label }}</a>
+                                    </h3>
+                                </div>
+                                <div class="panel-body sala-body">
+                                    <ul class="list-unstyled">
+                                        {% for sensor, valores in sala.condicoes_operacao %}
+                                        <li>
+                                        {{ sensor }} : {{ valores }}
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                        {% endfor %}
+                    </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
                     <div class="row placeholders" id="salas">
                         {% for sala in salas %}
-                        <div class="col-xs-6 col-sm-3 placeholder">
+                        <div class="col-xs-6 col-sm-3 placeholder {{ sala.html_class }}" id="sala-{{ sala.id }}">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h3 class="panel-title">
@@ -98,12 +136,14 @@
                                     <ul class="list-unstyled">
                                         {% for modulo in sala.modulos %}
                                         <li>
-                                            <div class="panel panel-default">
+                                            <div class="panel {{ modulo.estado.html_class }}">
                                                 <div class="panel-heading">{{ modulo.label }}</div>
                                                 <div class="panel-body">
                                                     <ul class="list-unstyled">
                                                         {% for sensor in modulo.sensores %}
-                                                        <li>{{ sensor.nome }}: {{ sensor.valor}}</li>
+                                                        <li class="sensor-{{ sensor.estado.html_class }}">
+                                                        {{ sensor.nome }}: {{ sensor.valor}}
+                                                        </li>
                                                         {% endfor %}
                                                       </ul>
                                                 </div>
