--- a/monitoring/templates/painel.html
+++ b/monitoring/templates/painel.html
@@ -155,44 +155,19 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="salas">
 
-                    <div class="row placeholders" id="salas">
+                    <div class="row placeholders">
                         {% for sala in salas %}
-                        <div class="col-xs-6 col-sm-3 placeholder sala {{ sala.html_class }}" id="sala-{{ sala.id }}">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <h3 class="panel-title">
-                                        <a href={{ sala.link_to_mapa }}>{{ sala.label }}</a>
-                                    </h3>
+                            {% if forloop.counter|divisibleby:5 %}
                                 </div>
-                                <div class="panel-body sala-body">
-                                    <ul class="list-unstyled">
-                                        {% for modulo in sala.modulos %}
-                                        <li>
-                                            <div class="panel {{ modulo.estado.html_class }}">
-                                                <div class="panel-heading">{{ modulo.label }}</div>
-                                                <div class="panel-body">
-                                                    <ul class="list-unstyled">
-                                                        {% for sensor in modulo.sensores %}
-                                                        <li class="sensor-{{ sensor.estado.html_class }}">
-                                                        {{ sensor.nome }}: {{ sensor.valor}}
-                                                        </li>
-                                                        {% endfor %}
-                                                      </ul>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        {% empty %}
-                                        <h5><span class="label label-info">Aviso</span> Esta sala não possui módulos cadastrados. Você deve cadastrá-los <a href="#">aqui</a></h5>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                                <div class="row placeholders">
+                            {% endif %}
+                                    {% include "sala_template.html" %}
                         {% empty %}
                         <h3><span class="label label-info">Aviso</span> Não foram encontradas salas no sistema</h3>
                         {% endfor %}
+                        </div>
                     </div>
 
                 </div>
